Add model, repository, controller

--- a/spring-boot-server/src/main/resources/application.properties
+++ b/spring-boot-server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=lab2
+spring.datasource.username=sa
+spring.datasource.password=<Pcw853428>
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
