Enable Hibernate to show SQL statements generated

--- a/spring-boot-server/src/main/resources/application.properties
+++ b/spring-boot-server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerC
 spring.datasource.username=sa
 spring.datasource.password=<Pcw853428>
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
