--- a/spring-boot-server/src/main/resources/application.properties
+++ b/spring-boot-server/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
 
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
